[tool.poetry]
name = "renpy-distribute-tools"
version = "0.2.0"
description = "Making Ren'Py distribution less of a pain in the arse"
authors = ["Marquis Kurt <software@marquiskurt.net>"]

[tool.poetry.dependencies]
python = ">= 3.7"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
