[tool.poetry]
name = "renpy-distribute-tools"
version = "0.3.1"
description = "Utilities that make Ren'Py distribution less of a pain in the arse"
authors = ["Marquis Kurt <software@marquiskurt.net>"]
homepage = "https://github.com/alicerunsonfeodra/renpy-distribute-tools"
documentation = "https://marquiskurt.net/renpy-distribute-tools/"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.7"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pdoc3 = "^0.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"